# mdbg

./: README.md  main.c  meson.build  tracer.c
doc/: doxyconfig
include/: alloc.h  autocomplete.h  auxv.h  backtrace.h  breakpoint.h  cmdutils.h  commands.h  disass.h  ebuf.h  elfparse.h  expr.h  func_resolve.h  interract.h  macro_utils.h  mdbg.h  mlist.h  mvect.h  proc_bin_map.h  proc_regs.h  proc_trace.h  process.h  procfs.h  setup.h  tracee.h  tracer.h
src/: alloc.c  autocomplete.c  auxv.c  b_ep.c  backtrace.c  break.c  break_del.c  break_list.c  breakf.c  breakpoint.c  breaks.c  cmdutils.c  commands.c  continue.c  disass.c  elfparse.c  examine.c  expr.c  finish.c  func_resolve.c  info_memory.c  info_regs.c  info_sig.c  interract.c  mdbg.c  meson.build  mlist.c  mvect.c  nexti.c  proc_bin_map.c  proc_regs.c  proc_trace.c  proc_wait.c  process.c  procfs.c  setreg.c  setup.c  stepi.c  test.c  tracee.c  (+1 more)
